--- a/CCS onboarding checklists/.gitlab-ci.yml
+++ b/CCS onboarding checklists/.gitlab-ci.yml
@@ -8,6 +8,7 @@ build_a:
     - gem install bundler
     - gem install asciidoctor
     - build_tools/build_html.sh
+    - ls -la html_files/
   artifacts:
     paths:
       - html_files
@@ -23,16 +24,13 @@ build_b:
     name: pandoc/latex
     entrypoint: ["/bin/sh", "-c"]
   script:
-    - rm -fr docx_files/*
     - cd html_files
-    - pwd
-    - find . -name "*.html*" | while read i; do pandoc -f html -t docx "$i" -o "${i%.*}.docx"; done
-    - ls -la
-    - find . -name '*.docx' -exec mv {} ../docx_files \;
-    - ls -la ../docx_files
+    - find . -name "*.html*" | while read i; do pandoc -f html -t odt "$i" -o "${i%.*}.odt"; done
+    - find . -name '*.odt' -exec mv {} ../odt_files \;
+    - ls -la ../odt_files
   artifacts:
     paths:
-      - docx_files
+      - odt_files
   only:
     - main
 
